# newrepo

./: .gitignore  DEV_FLOW.md  Dockerfile.txt  LICENSE.txt  README.md  README_SECRETS.md  SECURITY.md  VPS_HOSTING_GUIDE.md  alertmanager.yml  alpha_automation_server.spec  alpha_automation_server_linux.spec  auth.py  build_installer.sh  build_installer_windows.ps1  db.py  fb_automator.py  fb_client.py  metrics.py  models.py  prometheus.yml  prometheus_rules.yml  publish_worker.py  pyproject.toml  requirements.txt  scheduler.py  security.py  self_healer.py  server.py
.github/workflows/: build_artifacts.yml
admin/: batches.html  dashboard.html  devices.html  index.html  licenses.html  login.html  offers.html  posts.html  users.html
ai/: trainer.py
grafana/: alerts.json  dashboard.json
scripts/: trigger_workflow.py
tests/: conftest.py  test_automator.py  test_devices.py  test_e2e.py  test_playwright.py  test_publish_worker.py  test_self_healing.py  test_server.py  test_server_extra.py  test_users.py
workflows/: ci.yml
