[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-automation"
version = "0.1.0"
description = "Alpha Automation Facebook automation backend with license and offer activation."
authors = [
  { name = "Alpha Web Solutions" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[project.scripts]
alpha-automation = "server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
